--- a/02-lightbox.html
+++ b/02-lightbox.html
@@ -17,7 +17,16 @@
     <!-- Add gallery items to this list -->
     <ul class="gallery"></ul>
 
+    <h1 class="name">Anton</h1>
 
+    <form type="submit">
+
+      <input type="text" name="chamgeName">
+      <button type="submit">chamgeName</button>
+
+    </form>
+
+    <p class="errorMessage"></p>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.10.3/simple-lightbox.min.js" type="module"></script>
     
